--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/thanura-rashmika/node#readme",
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "request": "^2.73.0",
+    "yargs": "^4.7.1"
   }
 }
